# gedcom-analyzer

./: .gitignore  ARCHITEKTUR-KONZEPT.md  BACKLOG.md  CLAUDE.md  PLACE_NORMALIZATION_EXAMPLES.md  README.md  WEBTREES_PARSER_ANALYSIS.md  WIKI.md  WORKFLOW.md  config.py  fetch_shared_matches.bat  install.bat  main.py  pyproject.toml  requirements.txt  start.bat  start_chrome_debug.bat  start_page.py  unified.py  update-and-run.bat  viewer.py
.github/workflows/: ci.yml
ancestry/: README.md  __init__.py  config.py  endpoints.py  main.py  paths.py  requirements.txt
ancestry/core/: __init__.py  ai_copilot.py  api.py  auth.py  bridge.py  cluster.py  database.py  dedup_ml.py  entity_resolution.py  export.py  gedcom_export.py  matricula_bridge.py  ml_origin.py  mta_import.py  place_concordance.py  playwright_names.py  population_stats.py  scraper.py  shared_cm.py  treematch.py  triangulation.py  wikitree.py
ancestry/gui/: __init__.py  _colors.py  app.py  state.py
ancestry/models/: __init__.py  match.py
ancestry/tools/: MYHERITAGE_LADEN.md  NAMEN_LADEN.md  build_matricula_lexicon.py  bundle_for_llm.py  bundle_matricula_pdf.py  crawl_webtrees.py  diagnose_mh.py  discover_endpoint.py  download_all_matches.js  download_mother_kit.py  download_myheritage.py  entity_browser.py  fetch_ethnicity.py  fetch_matricula_books.py  fetch_mh_shared_matches.py  fetch_names_browser.js  ged_slim.py  gedmatch_paste_to_tsv.py  import_ftdna_matches.py  import_gedmatch.py  import_gedmatch_matches.py  import_mh_csv.py  import_mh_matches.py  import_segments.py  import_webtrees.py  import_wikitree.py  matricula_parish_map.json  matricula_status.py  matricula_viewer.py  mh_capture.js  (+21 more)
lib/: cache.py  gedcom.py  helpers.py  i18n.py  logger.py  places.py  theming.py
output/: genealogy_results.json
tasks/: _runner.py  anomalies.py  book_statistics.py  brickwalls.py  context.py  cousins.py  data_quality.py  demographics.py  dna_predict.py  endogamy.py  endogamy_network.py  export.py  export_cousins_map.py  export_dashboard.py  export_fanchart.py  export_graphml.py  export_gravity_map.py  export_heatmap.py  export_sankey.py  extract_subtree.py  family_structure.py  familysearch.py  genetics.py  help_data.py  history.py  import_ftm.py  imputation.py  lineage.py  merge_trees.py  migration.py  military.py  mrca.py  names.py  naming.py  network.py  online_research.py  onomastics.py  osnabrueck.py  report_browser.py  research_suggestions.py  (+5 more)
tests/: conftest.py  test_ai_copilot.py  test_architecture.py  test_bridge.py  test_cache.py  test_crawl_webtrees_facts.py  test_crawl_webtrees_places.py  test_crawl_webtrees_training.py  test_db_matches_repo.py  test_db_migrations.py  test_db_repos_shared.py  test_db_scopes.py  test_demographics.py  test_entity_resolution.py  test_export.py  test_fetch_ethnicity.py  test_ftdna_import.py  test_gedcom.py  test_gedcom_dna_export.py  test_genealogist_100.py  test_genealogist_1000.py  test_genealogist_1000_round2.py  test_genealogist_1000_round3.py  test_generation_lengths_fix.py  test_genetics.py  test_help_data.py  test_helpers.py  test_import_ftm.py  test_import_mh_csv.py  test_import_mh_matches.py  test_improvements_from_1000_qa.py  test_matching.py  test_matricula_bridge.py  test_matricula_status.py  test_migration.py  test_ml_origin.py  test_mta_import.py  test_new_analyses.py  test_phonetik.py  test_population_stats.py  (+9 more)
(+86 files in other folders)
