[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gedcom-analyzer"
version = "0.1.0"
description = "Genealogie-Suite: GEDCOM-Analyse, DNA-Match-Auswertung (Ancestry/MyHeritage/GEDmatch), Kirchenbuch-Erschließung (Matricula) und Entity-Resolution"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1,<4",
    "curl_cffi>=0.7.0",
]

[project.optional-dependencies]
viewer   = ["flask>=3.0"]
scraping = ["playwright>=1.40"]
vision   = ["anthropic>=0.40"]
dev      = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]
all      = ["gedcom-analyzer[viewer,scraping,vision,dev]"]

[tool.setuptools]
# Hinweis: 'tasks' und 'lib' sind generische Top-Level-Namen — nur editable
# in eine projekteigene virtuelle Umgebung installieren, nie systemweit.
packages = [
    "ancestry",
    "ancestry.core",
    "ancestry.core.db",
    "ancestry.core.db.repos",
    "ancestry.gui",
    "ancestry.gui.widgets",
    "ancestry.models",
    "ancestry.tools",
    "ancestry.utils",
    "tasks",
    "lib",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    # Bestehender Legacy-Stil (schrittweise bereinigt, kein CI-Gate)
    "E501",   # line-too-long (app.py hat ~300 Zeilen > 100)
    "E701",   # multiple-statements-on-one-line-colon
    "E702",   # multiple-statements-on-one-line-semicolon
    "E402",   # module-import-not-at-top-of-file (lazy imports bewusst eingesetzt)
    "F401",   # unused-import (viele Re-Exports und lazy-Import-Pattern)
    "F841",   # local variable assigned but never used
    "E741",   # ambiguous-variable-name (l, O, I – in Genealogiedaten üblich)
    "E731",   # lambda-assignment
    "E722",   # bare-except (bewusst in Scraper-Fallbacks)
    "F811",   # redefined-while-unused (lazy inner imports in GUI-Methoden)
]

[tool.ruff.lint.per-file-ignores]
# Tests dürfen assert-Rewrite-Pattern und mehr Freiheiten nutzen
"tests/*" = ["F811", "E401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["gui: Tests die tkinter/Display benötigen (unter CI mit xvfb oder skip)"]
